--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./style.css" />
-    <title>Rock paper and scissors</title>
+    <title>Rock-Paper-Scissors</title>
   </head>
   <body>
     <section class="game">
@@ -14,6 +13,7 @@
           <h2>Player</h2>
           <p>0</p>
         </div>
+
         <div class="computer-score">
           <h2>Computer</h2>
           <p>0</p>
@@ -21,16 +21,18 @@
       </div>
 
       <div class="intro">
-        <h1>Rock Paper and Scissors</h1>
-        <button>Let's Play</button>
+        <h1>Rock-Paper-Scissors</h1>
+        <button>Let's play</button>
       </div>
 
-      <div class="match fadeOut">
+      <div class="match">
         <h2 class="winner">Choose an option</h2>
+
         <div class="hands">
           <img class="player-hand" src="./assets/rock.png" alt="" />
           <img class="computer-hand" src="./assets/rock.png" alt="" />
         </div>
+
         <div class="options">
           <button class="rock">rock</button>
           <button class="paper">paper</button>
@@ -38,7 +40,6 @@
         </div>
       </div>
     </section>
-
-    <script src="app.js"></script>
+    <script src="./app.js"></script>
   </body>
 </html>
