--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
-    <title>Rock-Paper-Scissors</title>
+    <title>Rock Paper Scissors</title>
   </head>
   <body>
     <section class="game">
@@ -21,13 +21,12 @@
       </div>
 
       <div class="intro">
-        <h1>Rock-Paper-Scissors</h1>
+        <h1>Rock Paper Scissors</h1>
         <button>Let's play</button>
       </div>
 
       <div class="match">
         <h2 class="winner">Choose an option</h2>
-
         <div class="hands">
           <img class="player-hand" src="./assets/rock.png" alt="" />
           <img class="computer-hand" src="./assets/rock.png" alt="" />
